--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -34,7 +34,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Load pickled data\n",
@@ -341,7 +343,89 @@
    "source": [
     "### Preprocess the data here. It is required to normalize the data. Other preprocessing steps could include \n",
     "### converting to grayscale, etc.\n",
-    "### Feel free to use as many code cells as needed."
+    "### Feel free to use as many code cells as needed.\n",
+    "import cv2\n",
+    "\n",
+    "#convert everything to greyscale\n",
+    "\n",
+    "for i in range(n_train):\n",
+    "    X_train[i]=cv2.cvtColor(X_train[i], cv2.COLOR_RGB2GRAY)\n",
+    "    \n",
+    "for i in range(n_validation):\n",
+    "    X_valid[i]=cv2.cvtColor(X_valid[i], cv2.COLOR_RGB2GRAY)\n",
+    "    \n",
+    "for i in range(n_test):\n",
+    "    X_test[i]=cv2.cvtColor(X_test[i], cv2.COLOR_RGB2GRAY)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Image augmentation class\n",
+    "\n",
+    "class ImgAug:\n",
+    "\n",
+    "    def rnd_aug(self, img):\n",
+    "        vet = random.sample(range(4),k=2)\n",
+    "        \n",
+    "        #first transformation\n",
+    "        if vet[0] == 0:\n",
+    "            img = self.img_translate(img)\n",
+    "        if vet[0] == 1:\n",
+    "            img = self.img_rotate(img)\n",
+    "        if vet[0] == 2:\n",
+    "            img = self.img_persptra(img)\n",
+    "        if vet[0] == 3:\n",
+    "            img = self.img_lightmod(img)\n",
+    "        \n",
+    "        #second transformation\n",
+    "        if vet[1] == 0:\n",
+    "            img = self.img_translate(img)\n",
+    "        if vet[1] == 1:\n",
+    "            img = self.img_rotate(img)\n",
+    "        if vet[1] == 2:\n",
+    "            img = self.img_persptra(img)\n",
+    "        if vet[1] == 3:\n",
+    "            img = self.img_lightmod(img)\n",
+    "\n",
+    "        return img\n",
+    "\n",
+    "    def img_translate(self, img):\n",
+    "\n",
+    "        dx = random.sample(range(1,8,1),k=1)*random.sample([-1,1],k=1)\n",
+    "        dy = random.sample(range(1,8,1),k=1)*random.sample([-1,1],k=1)\n",
+    "        \n",
+    "        M = np.float32([[1, 0, dx], [0, 1, dy]])\n",
+    "        \n",
+    "        return cv2.warpAffine(img, M, (dx,dy))\n",
+    " \n",
+    "\n",
+    "    def img_rotate(self, img):\n",
+    "        rows,cols = img.shape\n",
+    "        dtheta = random.sample(range(1,10,1),k=1)*random.sample([-1,1],k=1)\n",
+    "\n",
+    "        M = cv2.getRotationMatrix2D((cols/2,rows/2),dtheta,1)\n",
+    "        \n",
+    "        return cv2.warpAffine(img,M,(cols,rows))\n",
+    "\n",
+    "    \n",
+    "    def img_persptra(self, img):\n",
+    "        \n",
+    "        dx = random.sample(range(2,8,1),k=1)*random.sample([-1,1],k=1)\n",
+    "        pts1 = np.float32([[4,4],[4,28],[16,28],[16,4]])\n",
+    "        pts2 = np.float32([[4,4],[4,28],[16+dx,28],[16+dx,4]])\n",
+    "\n",
+    "        M = cv2.getPerspectiveTransform(pts1,pts2)\n",
+    "        \n",
+    "        return cv2.warpPerspective(img,M,(32,32))\n",
+    "    \n",
+    "    def img_lightmod(self, img):"
    ]
   },
   {
