--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -560,8 +560,8 @@
     "    sigma = 0.1\n",
     "    \n",
     "    # TODO: Layer 1: Convolutional. Input = 32x32x1. Output = 28x28x6.\n",
-    "    conv1_W=tf.Variable(tf.truncated_normal((5,5,1,6),mean=mu,stddev=sigma))\n",
-    "    conv1_b=tf.Variable(tf.zeros(6))\n",
+    "    conv1_W=tf.Variable(tf.truncated_normal((5,5,1,6),mean=mu,stddev=sigma),name='W_conv1')\n",
+    "    conv1_b=tf.Variable(tf.zeros(6),name='b_conv1')\n",
     "    conv1=tf.nn.conv2d(x, conv1_W, strides=[1, 1, 1, 1], padding='VALID') + conv1_b\n",
     "\n",
     "    # TODO: Activation.\n",
@@ -571,8 +571,8 @@
     "    conv1=tf.nn.max_pool(conv1,ksize=[1,2,2,1],strides=[1,2,2,1],padding='VALID')\n",
     "    \n",
     "    # TODO: Layer 2: Convolutional. Output = 10x10x16.\n",
-    "    conv2_W=tf.Variable(tf.truncated_normal((5,5,6,16),mean=mu,stddev=sigma))\n",
-    "    conv2_b=tf.Variable(tf.zeros(16))\n",
+    "    conv2_W=tf.Variable(tf.truncated_normal((5,5,6,16),mean=mu,stddev=sigma),name='W_conv2')\n",
+    "    conv2_b=tf.Variable(tf.zeros(16),name='b_conv2')\n",
     "    conv2=tf.nn.conv2d(conv1, conv2_W, strides=[1, 1, 1, 1], padding='VALID') + conv2_b\n",
     "    \n",
     "    # TODO: Activation.\n",
@@ -585,8 +585,8 @@
     "    conv2=flatten(conv2)\n",
     "    \n",
     "    # TODO: Layer 3: Fully Connected. Input = 400. Output = 120.\n",
-    "    fc1_W=tf.Variable(tf.truncated_normal((400,120),mean=mu,stddev=sigma))\n",
-    "    fc1_b=tf.Variable(tf.zeros(120))\n",
+    "    fc1_W=tf.Variable(tf.truncated_normal((400,120),mean=mu,stddev=sigma),name='W_fc1')\n",
+    "    fc1_b=tf.Variable(tf.zeros(120),name='b_fc1')\n",
     "    fc1=tf.add(tf.matmul(conv2,fc1_W),fc1_b)\n",
     "    \n",
     "    # TODO: Activation.\n",
@@ -594,8 +594,8 @@
     "    fc1 = tf.nn.dropout(fc1, keep_prob)\n",
     "    \n",
     "    # TODO: Layer 4: Fully Connected. Input = 120. Output = 84.\n",
-    "    fc2_W=tf.Variable(tf.truncated_normal((120,84),mean=mu,stddev=sigma))\n",
-    "    fc2_b=tf.Variable(tf.zeros(84))\n",
+    "    fc2_W=tf.Variable(tf.truncated_normal((120,84),mean=mu,stddev=sigma),name='W_fc2')\n",
+    "    fc2_b=tf.Variable(tf.zeros(84),name='b_fc2')\n",
     "    fc2=tf.add(tf.matmul(fc1,fc2_W),fc2_b)\n",
     "    \n",
     "    # TODO: Activation.\n",
@@ -603,8 +603,8 @@
     "    fc2 = tf.nn.dropout(fc2, keep_prob)\n",
     "    \n",
     "    # TODO: Layer 5: Fully Connected. Input = 84. Output = n_classes.\n",
-    "    fc3_W=tf.Variable(tf.truncated_normal((84,n_classes),mean=mu,stddev=sigma))\n",
-    "    fc3_b=tf.Variable(tf.zeros(n_classes))\n",
+    "    fc3_W=tf.Variable(tf.truncated_normal((84,n_classes),mean=mu,stddev=sigma),name='W_fc3')\n",
+    "    fc3_b=tf.Variable(tf.zeros(n_classes),name='b_fc3')\n",
     "    logits=tf.add(tf.matmul(fc2,fc3_W),fc3_b)\n",
     "    \n",
     "    return logits"
@@ -918,7 +918,6 @@
     "### Feel free to use as many code cells as needed.\n",
     "with tf.Session() as sess:\n",
     "    saver.restore(sess, tf.train.latest_checkpoint('.'))\n",
-    "    #topk=sess.run(tf.nn.top_k(cross_entropy, k=5),feed_dict={x: newfig1, keep_prob: 1.})\n",
     "    topk=sess.run(tf.nn.top_k(tf.nn.softmax(logits),k=5),feed_dict={x: newfig1, keep_prob: 1.})\n",
     "    print(topk)\n",
     "    #print(\"Topk = {:.3f}\".format(topk))\n"
