--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -674,113 +674,33 @@
       "Training...\n",
       "\n",
       "EPOCH 1 ...\n",
-      "Training Accuracy = 0.755\n",
-      "Validation Accuracy = 0.792\n",
+      "Training Accuracy = 0.756\n",
+      "Validation Accuracy = 0.811\n",
       "\n",
       "EPOCH 2 ...\n",
-      "Training Accuracy = 0.852\n",
-      "Validation Accuracy = 0.853\n",
+      "Training Accuracy = 0.860\n",
+      "Validation Accuracy = 0.880\n",
       "\n",
       "EPOCH 3 ...\n",
-      "Training Accuracy = 0.898\n",
-      "Validation Accuracy = 0.895\n",
+      "Training Accuracy = 0.894\n",
+      "Validation Accuracy = 0.892\n",
       "\n",
       "EPOCH 4 ...\n",
-      "Training Accuracy = 0.913\n",
-      "Validation Accuracy = 0.913\n",
+      "Training Accuracy = 0.916\n",
+      "Validation Accuracy = 0.908\n",
       "\n",
       "EPOCH 5 ...\n",
       "Training Accuracy = 0.928\n",
-      "Validation Accuracy = 0.918\n",
+      "Validation Accuracy = 0.912\n",
       "\n",
-      "Test Accuracy = 0.917\n",
-      "Test Precision for class #0 Speed limit (20km/h)= 0.845\n",
-      "Test Recall for class #0 Speed limit (20km/h)= 0.817\n",
-      "Test Precision for class #1 Speed limit (30km/h)= 0.924\n",
-      "Test Recall for class #1 Speed limit (30km/h)= 0.951\n",
-      "Test Precision for class #2 Speed limit (50km/h)= 0.881\n",
-      "Test Recall for class #2 Speed limit (50km/h)= 0.953\n",
-      "Test Precision for class #3 Speed limit (60km/h)= 0.875\n",
-      "Test Recall for class #3 Speed limit (60km/h)= 0.951\n",
-      "Test Precision for class #4 Speed limit (70km/h)= 0.966\n",
-      "Test Recall for class #4 Speed limit (70km/h)= 0.909\n",
-      "Test Precision for class #5 Speed limit (80km/h)= 0.928\n",
-      "Test Recall for class #5 Speed limit (80km/h)= 0.863\n",
-      "Test Precision for class #6 End of speed limit (80km/h)= 1.000\n",
-      "Test Recall for class #6 End of speed limit (80km/h)= 0.767\n",
-      "Test Precision for class #7 Speed limit (100km/h)= 0.980\n",
-      "Test Recall for class #7 Speed limit (100km/h)= 0.858\n",
-      "Test Precision for class #8 Speed limit (120km/h)= 0.893\n",
-      "Test Recall for class #8 Speed limit (120km/h)= 0.924\n",
-      "Test Precision for class #9 No passing= 0.886\n",
-      "Test Recall for class #9 No passing= 0.958\n",
-      "Test Precision for class #10 No passing for vehicles over 3.5 metric tons= 0.979\n",
-      "Test Recall for class #10 No passing for vehicles over 3.5 metric tons= 0.994\n",
-      "Test Precision for class #11 Right-of-way at the next intersection= 0.880\n",
-      "Test Recall for class #11 Right-of-way at the next intersection= 0.945\n",
-      "Test Precision for class #12 Priority road= 0.974\n",
-      "Test Recall for class #12 Priority road= 0.967\n",
-      "Test Precision for class #13 Yield= 0.996\n",
-      "Test Recall for class #13 Yield= 0.992\n",
-      "Test Precision for class #14 Stop= 0.874\n",
-      "Test Recall for class #14 Stop= 1.000\n",
-      "Test Precision for class #15 No vehicles= 0.839\n",
-      "Test Recall for class #15 No vehicles= 0.990\n",
-      "Test Precision for class #16 Vehicles over 3.5 metric tons prohibited= 0.903\n",
-      "Test Recall for class #16 Vehicles over 3.5 metric tons prohibited= 0.993\n",
-      "Test Precision for class #17 No entry= 0.988\n",
-      "Test Recall for class #17 No entry= 0.897\n",
-      "Test Precision for class #18 General caution= 0.860\n",
-      "Test Recall for class #18 General caution= 0.805\n",
-      "Test Precision for class #19 Dangerous curve to the left= 0.826\n",
-      "Test Recall for class #19 Dangerous curve to the left= 0.950\n",
-      "Test Precision for class #20 Dangerous curve to the right= 0.738\n",
-      "Test Recall for class #20 Dangerous curve to the right= 0.844\n",
-      "Test Precision for class #21 Double curve= 0.829\n",
-      "Test Recall for class #21 Double curve= 0.967\n",
-      "Test Precision for class #22 Bumpy road= 0.978\n",
-      "Test Recall for class #22 Bumpy road= 0.733\n",
-      "Test Precision for class #23 Slippery road= 0.873\n",
-      "Test Recall for class #23 Slippery road= 0.913\n",
-      "Test Precision for class #24 Road narrows on the right= 0.873\n",
-      "Test Recall for class #24 Road narrows on the right= 0.767\n",
-      "Test Precision for class #25 Road work= 0.887\n",
-      "Test Recall for class #25 Road work= 0.912\n",
-      "Test Precision for class #26 Traffic signals= 0.715\n",
-      "Test Recall for class #26 Traffic signals= 0.794\n",
-      "Test Precision for class #27 Pedestrians= 0.578\n",
-      "Test Recall for class #27 Pedestrians= 0.433\n",
-      "Test Precision for class #28 Children crossing= 0.856\n",
-      "Test Recall for class #28 Children crossing= 0.953\n",
-      "Test Precision for class #29 Bicycles crossing= 0.662\n",
-      "Test Recall for class #29 Bicycles crossing= 0.978\n",
-      "Test Precision for class #30 Beware of ice/snow= 0.697\n",
-      "Test Recall for class #30 Beware of ice/snow= 0.307\n",
-      "Test Precision for class #31 Wild animals crossing= 0.985\n",
-      "Test Recall for class #31 Wild animals crossing= 0.989\n",
-      "Test Precision for class #32 End of all speed and passing limits= 0.769\n",
-      "Test Recall for class #32 End of all speed and passing limits= 0.833\n",
-      "Test Precision for class #33 Turn right ahead= 0.990\n",
-      "Test Recall for class #33 Turn right ahead= 0.976\n",
-      "Test Precision for class #34 Turn left ahead= 0.896\n",
-      "Test Recall for class #34 Turn left ahead= 1.000\n",
-      "Test Precision for class #35 Ahead only= 0.982\n",
-      "Test Recall for class #35 Ahead only= 0.859\n",
-      "Test Precision for class #36 Go straight or right= 0.951\n",
-      "Test Recall for class #36 Go straight or right= 0.967\n",
-      "Test Precision for class #37 Go straight or left= 0.723\n",
-      "Test Recall for class #37 Go straight or left= 1.000\n",
-      "Test Precision for class #38 Keep right= 0.978\n",
-      "Test Recall for class #38 Keep right= 0.955\n",
-      "Test Precision for class #39 Keep left= 0.945\n",
-      "Test Recall for class #39 Keep left= 0.956\n",
-      "Test Precision for class #40 Roundabout mandatory= 0.910\n",
-      "Test Recall for class #40 Roundabout mandatory= 0.678\n",
-      "Test Precision for class #41 End of no passing= 0.936\n",
-      "Test Recall for class #41 End of no passing= 0.733\n",
-      "Test Precision for class #42 End of no passing by vehicles over 3.5 metric tons= 0.988\n",
-      "Test Recall for class #42 End of no passing by vehicles over 3.5 metric tons= 0.900\n",
-      "Model saved\n"
+      "EPOCH 6 ...\n",
+      "Training Accuracy = 0.938\n",
+      "Validation Accuracy = 0.920\n",
+      "\n",
+      "EPOCH 7 ...\n",
+      "Training Accuracy = 0.945\n",
+      "Validation Accuracy = 0.927\n",
+      "\n"
      ]
     }
    ],
@@ -792,7 +712,7 @@
     "### Feel free to use as many code cells as needed.\n",
     "from sklearn.metrics import precision_score, recall_score\n",
     "\n",
-    "EPOCHS = 5\n",
+    "EPOCHS = 50\n",
     "BATCH_SIZE = 128\n",
     "\n",
     "x = tf.placeholder(tf.float32, (None, 32, 32, 1))\n",
