--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -700,6 +700,10 @@
       "EPOCH 7 ...\n",
       "Training Accuracy = 0.945\n",
       "Validation Accuracy = 0.927\n",
+      "\n",
+      "EPOCH 8 ...\n",
+      "Training Accuracy = 0.954\n",
+      "Validation Accuracy = 0.927\n",
       "\n"
      ]
     }
